--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "kriswallsmith/assetic": "1.3.2",
         "symfony/polyfill-php70": "^1.0",
         "lukasreschke/id3parser": "^0.0.1",
-        "sabre/dav": "^3.2"
+        "sabre/dav": "^3.2",
+        "doctrine/migrations": "^1.4"
     }
 }
